<resources>
    <string name="app_name">German Pocket Dictionary</string>

    <!-- Title of all the Tabs/Categories -->
    <string name="category_all_words">All Words</string>
    <string name="category_nouns">Nouns</string>
    <string name="category_numbers">Numbers</string>
    <string name="category_colors">Colors</string>
    <string name="category_verbs">Verbs</string>
    <string name="category_questions">Questions</string>


    <!-- Title for Agreement AlertDialogBox -->
    <string name="agreement_title">TERMS OF USE, WARRANTIES AND RELEASE AGREEMENT</string>

    <!-- Agreement Declaration Text -->
    <string name="declaration">I have read the above Terms and Conditions.</string>

    <!-- Agreement failed to load text -->
    <string name="agreement_failed_to_load">Agreement failed to load, contact the developer</string>
    <!-- Text to display in the list when there are no words [CHAR LIMIT=NONE] -->
    <string name="no_words">No word(s) found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- text to display loading on going process -->
    <string name="loading_text">Loading\.\.\.</string>

    <!-- Text to display additional information of a word -->
    <string name="root_word_label">Root Word:\u0020</string>
    <string name="plural_word_label">Plural:\u0020 </string>
    <string name="opposite_word_label">Opposite:\u0020 </string>
    <string name="partizip_label">Partizip II:\u0020</string>
    <string name="helping_verb_label">Helping verb:\u0020 </string>


    <!--Menu Items labels -->
    <string name="rate_this_app">Rate This App</string>
    <string name="send_feedback">Feedback</string>
    <string name="share">Share</string>

    <!-- Feedback Activity Texts Labels -->
    <string name="feedback_name_label">Name:\u0020</string>
    <string name="feedback_email_label">Email:\u0020</string>
    <string name="feedback_feedback_label">Feedback:\u0020</string>
    <string name="feedback_additional_information_label">Additional Information:\u0020</string>

    <!-- Hints for the Feedback Activity -->
    <string name="hint_user_name">User Name*</string>
    <string name="hint_email">Email*</string>
    <string name="hint_feedback">Feedback*</string>
    <string name="hint_additional_information">Additional Information (Optional)</string>

    <!-- Feedback Menu Item -->
    <string name="action_save">Save</string>
    <string name="category_opposite">Opposite</string>
    <string name="categories">Categories</string>
    <string name="error_loading_data">Error Loading Data from the server</string>
    <string name="arrow_content_desp">arrow</string>
    <string name="error_feedback_empty">Feedback field is empty.</string>
    <string name="error_user_name_empty">Username field is empty</string>
    <string name="feedback_label">Feedback</string>


</resources>
