<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/categories">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_all_words"
                    android:title="@string/category_all_words" />
                <item
                    android:id="@+id/nav_nouns"
                    android:title="@string/category_nouns" />
                <item
                    android:id="@+id/nav_verbs"
                    android:title="@string/category_verbs" />
                <item
                    android:id="@+id/nav_numbers"
                    android:title="@string/category_numbers" />
                <item
                    android:id="@+id/nav_colors"
                    android:title="@string/category_colors" />
                <item
                    android:id="@+id/nav_questions"
                    android:title="@string/category_questions" />
                <item
                    android:id="@+id/nav_opposites"
                    android:title="@string/category_opposite" />
            </group>
        </menu>
    </item>
</menu>